# ithub-telegram-uprosto

./: .gitignore  TODO.md  data.json  global.css  index.html  style.css
assets/: index-07KkIV8W.js  index-1desIQu7.js  index-4nrFYcNp.js  index-5ieELxzP.js  index-7OYWxCoT.js  index-B0rca-og.js  index-B2nlC9J_.js  index-B7CUrDRH.js  index-B8XYegQS.js  index-B91ml10J.js  index-B9Bho_sD.js  index-BCnDxGie.js  index-BFn1xXCH.js  index-BHmGP8Pu.js  index-BJK1iZ03.js  index-BK4lIll8.js  index-BLG6aO5_.css  index-BPpothVy.css  index-BSzAtnl-.js  index-BUAq6xWb.css  index-Bc6qxsBK.js  index-BdyBRn_y.js  index-Beg5TzhY.css  index-BkLkabFm.js  index-BnCs2p9O.js  index-BrTBgRkC.js  index-BsXSrRip.js  index-BslnhE1s.js  index-BuC3oX1m.js  index-C0JIEKFY.js  index-C4IW5TL3.js  index-C51TXcBZ.css  index-C72nUdsP.css  index-C9y5lH4r.js  index-CAXYO4Bj.js  index-CG44pCFf.js  index-CGtLzR_q.js  index-CM74gpmU.css  index-CNPXPP1u.js  (+53 more)
backend/: .env.copy  aaa.py  base.py  config.py  generate_pdf.py  main.py  pdf.py  pdf2.py  pyproject.toml
backend/database/: instance.py  local.sqlite3  seed.py  test.py
backend/database/models/: _base.py  comment.py  company.py  lottery.py
backend/presenters/: abc.py
backend/presenters/base/: abc.py  html_builder.py  pdf_builder.py  tabular_builder.py
backend/presenters/companies/: companies_pdf_presenter.py  companies_tabular_presenter.py
backend/presenters/lottery/: lottery_html_presenter.py  lottery_tabular_presenter.py
backend/use_cases/: companies_report.py  lottery_report.py  save_lottery_results.py  save_puzzle_results.py
(+30 files in other folders)
