[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "fonttools>=4.59.1",
    "fpdf2>=2.8.4",
    "peewee>=3.18.2",
    "prettytable>=3.16.0",
    "pydantic-settings>=2.10.1",
    "xlsxwriter>=3.2.5",
]
